--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
             /* 英文名样式 */
             .english-name {
-                font-size: 1.1rem; /* 字体大小 */
+                font-size: 1.0rem; /* 字体大小 */
                 color: #666; /* 字体颜色 */
                 text-align: center; /* 文本居中 */
                 margin-bottom: 1.5rem; /* 底部外边距 */
@@ -735,7 +735,7 @@
             <div class="personal-info-item">
                 <div class="personal-info-icon"><i class="fas fa-home"></i></div>
                 <div class="personal-info-content">
-                    <strong>现住地</strong>
+                    <strong>现居地</strong>
                     <p>无锡堰桥</p>
                 </div>
             </div>
@@ -753,11 +753,11 @@
                             <h3 class="timeline-title">江南大学（双一流、211） - 电子与通信工程专业硕士 - 排名前10%</h3>
                             <ul class="custom-list">
                                 <li> SCI论文 <a href="https://ieeexplore.ieee.org/document/8896964" class="break-link">
-                                    《Delay-Sensitive Task Offloading in the 802.11p-Based Vehicular Fog Computing Systems》</a>
+                                    《Delay-Sensitive Task Offloading in the 802.11p-Based VFC Systems》</a>
                                     <br>发表在期刊《IEEE Internet of Things Journal》
                                 </li>
                                 <li> SCI论文 <a href=https://doi.org/10.3390/electronics8020148 class="break-link">
-                                    《Trajectory Protection Schemes Based on a Gravity Mobility Model in IoT》</a>
+                                    《Trajectory Protection Schemes Based on a GM Model in IoT》</a>
                                     <br>发表在期刊《Electronics》
                                 </li>
                                 <li>江南大学优秀研究生、江南大学一等奖学金、担任班干部</li>
@@ -769,7 +769,7 @@
                             <div class="timeline-date">2013.9 - 2017.6   本科</div>
                             <h3 class="timeline-title">安徽建筑大学（一本） - 通信工程 - 排名前15%</h3>
                             <ul class="custom-list">
-                                <li> 英语6级（495）、计算机三级数据库、计算机二级C语言</li>
+                                <li>英语6级（495）、计算机三级数据库/二级C语言</li>
                                 <li>优秀学生干部、全校演讲比赛一等奖、国家一等助学金、学习进步先进个人、文体活动先进个人</li>
                                 <li>担任班长、辅导员助理</li>
                             </ul>
@@ -777,7 +777,7 @@
                     </div>
                 </div>
 
-                <!-- 学科竞赛卡片 -->
+                <!-- 工作经历和成果 -->
                 <div class="card" id="competition-card">
                     <h2 class="card-title">工作经历和成果</h2>
                     <div class="timeline">
@@ -794,11 +794,11 @@
                                 实现了取得了从“职场小白->技术骨干->牵头骨干”的个人进步和成长. 目前正带领3人开展申威AI芯片研发项目攻关，
                                 完成芯片调试和性能计数器功能验证, 已实现面向AI卡的debugger和profiler代码雏形.，输出技术文档十余篇</p><br>
                             <ul class="custom-list">
-                            <li>申威AI芯片“攻关先锋”奖、研究院“年度先进个人”奖、研究院“大干之星”奖</li>
+                            <li>申威AI芯片“攻关先锋”奖、单位“年度先进个人”奖、“大干之星”奖</li>
                             <li>1篇论文 <a href=https://hanxuliu.github.io/pdf-web/paper/paper_gdb.html class="break-link">《面向申威平台的反向调试技术研究》</a></li>
-                            <li>3篇专利<a href=https://hanxuliu.github.io/pdf-web/patent/patent_lldb.html class="break-link">《一种硬件支持的观察点调试方法》</a>
+                            <li>3篇专利<a href=https://hanxuliu.github.io/pdf-web/patent/patent_lldb.html class="break-link">《一种硬件观察点调试方法》</a>
                                 <a href=https://hanxuliu.github.io/pdf-web/patent/patent_gdb.html class="break-link">《一种程序调试方法》</a>
-                                <a href=https://hanxuliu.github.io/pdf-web/patent/patent_hpc.html class="break-link">《一种基于申威架构的线程并行程序性能分析方法及系统》</a></li>
+                                <a href=https://hanxuliu.github.io/pdf-web/patent/patent_hpc.html class="break-link">《一种并行程序性能分析方法》</a></li>
                             <li>2篇软著《申威LLDB调试器软件》《申威Systemtap跟踪和探测工具软件》</li>
                             <li>计算机技术与软件专业技术资格：软件设计师（中级）认证</li>
                 </ul>
@@ -806,39 +806,23 @@
                     </div>
                 </div>
 
-                <!-- 论文与项目卡片 -->
-                <!--<div class="card" id="project-card">
-                    <h2 class="card-title">论文与项目</h2>
-                    <div class="timeline">
-                        <div class="timeline-item">
-                            <div class="timeline-date">2023 ~ 2025</div>
-                            <h3 class="timeline-title">基于深度学习的图像识别系统</h3>
-                            <p>发表论文于《计算机应用研究》</p>
-                            <p>项目链接: github.com/zhangsan/image-recognition</p>
-                        </div>
-                        <div class="timeline-item">
-                            <div class="timeline-date">2022</div>
-                            <h3 class="timeline-title">校园二手交易平台</h3>
-                            <p>负责前端开发与UI设计</p>
-                            <p>用户量超过5000+</p>
-                        </div>
-                    </div>
-                </div>-->
-
-                <!-- 实习经历卡片模块 -->
+                <!-- 项目经历 -->
                 <div class="card" id="info-card">
                     <h2 class="card-title">项目经历</h2>
 
                     <div class="info-item">
-                        <h3 class="info-title">自主架构服务器芯片研发项目</h3>
+                        <h3 class="info-title">一、自主架构服务器芯片研发项目</h3>
                         <p class="info-date">2021年12月 - 2024年12月</p>
-                        <p class="info-description">负责子课题《面向自主架构的开发支撑技术》研发，基于申威自主指令集架构SW64，
+                        <p class="info-description">负责子课题《面向自主架构的开发支撑技术》研发，基于申威自主指令集架构SW64：
                             ①完成申威LLDB框架设计、功能代码编写、测试集验证，从零突破首次实现SW64架构支持；解决LLDB与Clang表达式解析器兼容问题，
-                            实现对 LLVM JIT 和 Disassembler 模块集成，成功支持断点/反汇编/查看寄存器/查看内存/远程调试/多线程调试等功能，无缝兼容申威LLVM编译工具链。
-                            充分挖掘CPU硬件特性, 实现LLDB硬件观察点功能，匹配速度提升数十倍。
-                            ②完成申威GDB反向调试(Reverse Debugging)高级功能开发, 使SW64成为第4个成功支持的架构(仅次于x86/arm/ppc)。不断扩充强化GDB功能，实现
-                            watchpoint/catchpoint/gdbserver等功能支持，最终使得申威GDB testsuite测试集通过率达99.8%。
-                            ③完成Go语言专属调试器Delve开发，支持协程级精准调试。④带领新人完成Systemtap/Ltrace/Libunwind等工具研发。目前GDB/LLDB/Systemtap等工具已被阿里、统信、麒麟等几十家合厂商广泛使用，并开源至申威社区/欧拉社区/龙蜥社区。
+                            实现对 LLVM JIT 和 Disassembler 模块集成，成功支持断点/反汇编/查看寄存器/查看内存/远程调试/多线程调试等功能，
+                            无缝兼容申威LLVM编译工具链。
+                            ②充分挖掘CPU硬件特性, 实现LLDB硬件观察点功能，匹配速度提升数十倍。
+                            ③完成申威GDB反向调试(Reverse Debugging)高级功能开发, 使SW64成为第4个成功支持的架构(仅次于x86/arm/ppc)。
+                            不断扩充强化GDB功能，实现watchpoint/catchpoint/gdbserver等功能支持，最终使申威GDB testsuite测试集通过率达99.8%。
+                            ④完成Go语言专属调试器Delve开发，支持协程级精准调试。
+                            ⑤带领新人完成Systemtap/Ltrace/Libunwind等工具研发。目前GDB/LLDB/Systemtap等工具已被阿里、统信、麒麟等几十家合厂商
+                            广泛使用，并已开源至申威社区/欧拉社区/龙蜥社区。
                             <br>开源链接：<a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10015 class="break-link">GDB</a>
                             <a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10057 class="break-link">LLDB</a>
                             <a href=https://developer.wxiat.cn/#/ecology/basicsoftware/detail?id=10062 class="break-link">Delve</a>
@@ -849,17 +833,19 @@
                     </div>
 
                     <div class="info-item">
-                        <h3 class="info-title">申威AI加速卡芯片研发项目</h3>
+                        <h3 class="info-title">二、申威AI加速卡芯片研发项目</h3>
                         <p class="info-date">2025年6月 - 至今</p>
-                        <p class="info-description">负责AI加速卡芯片中调试功能测试验证和调试器原型代码开发，主要基于硬件仿真器和FPGA平台开展，
-                            覆盖硬件断点、数据流/指令流匹配、HBM/SM读写、寄存器读写、运行状态控制等模块，
-                            发现硬件问题十余项，保障芯片功能设计正确性。同时开展与操作系统（驱动运行时接口）、
-                            编译器（device代码反汇编、dwarf调试信息）功能接口的联合开发和调试。
+                        <p class="info-description">负责AI加速卡芯片中调试模块测试验证和调试器原型代码开发。
+                            主要基于硬件仿真器和FPGA平台开展调试功能硅前测试验证，覆盖硬件断点、性能计数器、
+                            数据流/指令流匹配、HBM/SM内存读写、寄存器读写、运行状态控制等模块，
+                            目前累计发现硬件设计问题十余项，保障芯片功能正确性。
+                            同时开展与操作系统、编译器功能接口的联合开发和调试，涉及OS里新增驱动运行时接口、
+                            LLVM新增device代码反汇编接口和device端dwarf调试信息）。
                         </p>
                     </div>
 
                     <div class="info-item">
-                        <h3 class="info-title">申威“生态+AI”融合创新项目</h3>
+                        <h3 class="info-title">三、申威“生态+AI”融合创新项目</h3>
                         <p class="info-date">2025年3月 - 2024年5月</p>
                         <p class="info-description">负责研究探索申威平台开发者生态软件与大模型融合的可行方案，突破“调试器+大模型”技术融合壁垒，
                             完成与LLM交互功能代码编写，在申威平台首次创新性实现将DeepSeek、ChatGPT等大模型接入Linux平台3大调试器(GDB/LLDB/Delve)中，
@@ -872,7 +858,7 @@
                     </div>
 
                     <div class="info-item">
-                        <h3 class="info-title">阿里数据工程项目攻关查错</h3>
+                        <h3 class="info-title">四、阿里数据工程项目攻关查错</h3>
                         <p class="info-date">2021年9月 阿里云大数据适配遇到段错误</p>
                         <p class="info-description">在阿里数据工程适配项目中，出现boost协程库coredump问题。时值疫情严峻，逆流而上出差北京，展开持续29天的查错攻关，
                             深挖出一系列申威底层特性相关错误，涉及编译器优化、上下文切换、寄存器配置等方面，解决阻碍项目进展2个多月的卡点。
@@ -882,7 +868,7 @@
                     </div>
 
                     <div class="info-item">
-                        <h3 class="info-title">天翼云项目紧急攻关查错</h3>
+                        <h3 class="info-title">五、天翼云项目紧急攻关查错</h3>
                         <p class="info-date">2023年9月 天翼云VPP服务适配coredump查粗</p>
                         <p class="info-description">在天翼云适配项目中，出现vpp服务异崩溃问题。深挖出底层特性相关报错，覆盖堆栈地址分配、共享地址非法覆写、
                             memset内存操作的粒度等方面，保障项目追赶上计划进度。
