--- a/index.html
+++ b/index.html
@@ -835,22 +835,24 @@
                     <div class="info-item">
                         <h3 class="info-title">二、申威AI加速卡芯片研发项目</h3>
                         <p class="info-date">2025年6月 - 至今</p>
-                        <p class="info-description">负责AI加速卡芯片中调试模块测试验证和调试器原型代码开发。
-                            主要基于硬件仿真器和FPGA平台开展调试功能硅前测试验证，覆盖硬件断点、性能计数器、
+                        <p class="info-description">负责AI加速卡芯片中调试模块测试验证和调试器原型开发。
+                            基于硬仿和FPGA平台开展调试功能硅前测试验证，覆盖硬件断点、性能计数器、
                             数据流/指令流匹配、HBM/SM内存读写、寄存器读写、运行状态控制等模块，
                             目前累计发现硬件设计问题十余项，保障芯片功能正确性。
                             同时开展与操作系统、编译器功能接口的联合开发和调试，涉及OS里新增驱动运行时接口、
-                            LLVM新增device代码反汇编接口和device端dwarf调试信息）。
+                            LLVM里新增device代码反汇编接口和设备端dwarf调试信息。
                         </p>
                     </div>
 
                     <div class="info-item">
                         <h3 class="info-title">三、申威“生态+AI”融合创新项目</h3>
                         <p class="info-date">2025年3月 - 2024年5月</p>
-                        <p class="info-description">负责研究探索申威平台开发者生态软件与大模型融合的可行方案，突破“调试器+大模型”技术融合壁垒，
-                            完成与LLM交互功能代码编写，在申威平台首次创新性实现将DeepSeek、ChatGPT等大模型接入Linux平台3大调试器(GDB/LLDB/Delve)中，
-                            并带领实习生实现将大模型接入内存分析工具Valgrind中。实现AI能力与调试器的原生级融合，避免“跨窗口、割裂式”的AI使用体验，
-                            通过AI赋能开发者生态工具，明显提升申威平台开发查错效率。
+                        <p class="info-description">负责探索申威平台开发者生态软件与大模型的融合方案，
+                            突破“调试器+大模型”技术融合壁垒，完成与LLM交互功能代码编写，在申威平台首次
+                            创新性实现将DeepSeek、ChatGPT等大模型接入三大调试器(GDB/LLDB/Delve)中，
+                            并带领实习生成功将大模型接入内存分析工具Valgrind中。
+                            实现AI能力与调试器的原生级融合，避免“跨窗口、割裂式”的AI使用体验，明显提升
+                            申威平台开发查错效率。
                             <br>效果展示链接：<a href=https://developer.wxiat.cn class="break-link">GDB接入ChatGPT</a>
                             <a href=https://developer.wxiat.cn class="break-link">LLDB接入DeepSeek</a>
                             <a href=https://developer.wxiat.cn class="break-link">Valgrind接入DeepSeek</a>
@@ -859,29 +861,47 @@
 
                     <div class="info-item">
                         <h3 class="info-title">四、阿里数据工程项目攻关查错</h3>
-                        <p class="info-date">2021年9月 阿里云大数据适配遇到段错误</p>
-                        <p class="info-description">在阿里数据工程适配项目中，出现boost协程库coredump问题。时值疫情严峻，逆流而上出差北京，展开持续29天的查错攻关，
-                            深挖出一系列申威底层特性相关错误，涉及编译器优化、上下文切换、寄存器配置等方面，解决阻碍项目进展2个多月的卡点。
-                            <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错攻关报告</a>
+                        <p class="info-date">2022年9月 - 2022年10月</p>
+                        <p class="info-description">负责排查阿里大数据odps集群服务调用folly和boost库时coredump报错。
+                            深挖出一系列申威底层特性相关错误，涉及编译器优化、上下文切换、寄存器配置等方面。
+                            通过将odps集群模块解耦， 并自编测试用例依次验证，最终定位出两方面原因：
+                            ①boost协程汇编实现时忽略了SW64架构底层操作差异性，导致协程上下文信息的错误保存和恢复；
+                            ②通过调试汇编代码定位到，odps产品联合编译时隐含指定了优化选项，导致folly库编译时指令优化异常。
+                            出差北京展开为期29天的攻关，成功解决该问题，推动了阿里后续众多大数据产品线联调，
+                            解决阻碍项目进展2个多月的卡点。
+                            <br>相关证明链接：<a href=https://hanxuliu.github.io/pdf-web/report/ali_boost_coredump.html class="break-link">查错总结报告</a>
                             <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
                         </p>
                     </div>
 
                     <div class="info-item">
-                        <h3 class="info-title">五、天翼云项目紧急攻关查错</h3>
-                        <p class="info-date">2023年9月 天翼云VPP服务适配coredump查粗</p>
+                        <h3 class="info-title">五、天翼云项目</h3>
+                        <p class="info-date">2024年3月 PRCR-JIT研发</p>
                         <p class="info-description">在天翼云适配项目中，出现vpp服务异崩溃问题。深挖出底层特性相关报错，覆盖堆栈地址分配、共享地址非法覆写、
                             memset内存操作的粒度等方面，保障项目追赶上计划进度。
+                            <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错记录</a>
+                            <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
+                        </p><br>
+
+                        <p class="info-date">2024年7月 天翼云VPP服务适配coredump攻关查错</p>
+                        <p class="info-description">在天翼云适配项目中，出现vpp服务异崩溃问题。深挖出底层特性相关报错，覆盖堆栈地址分配、共享地址非法覆写、
+                            memset内存操作的粒度等方面，保障项目追赶上计划进度。历经两周的全身心投入排查下，
+                            定位到天翼云自研软件ctcc_monitor里对内存地址的非法篡改行为，
+                            继续深挖问题原因发现源于申威vpp移植代码中沿用x86架构硬编码的地址，导致与申威内存布局冲突。
+                            找到报错根源，该问题迎刃而解，项目进度恢复正常。
                             <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错记录</a>
                             <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
                         </p>
                     </div>
 
                     <div class="info-item">
-                        <h3 class="info-title">申威嵌入式芯片研发项目</h3>
+                        <h3 class="info-title">六、移动云项目PRCR-JIT组件研发</h3>
                         <p class="info-date">2023年9月 天翼云VPP服务适配coredump查粗</p>
-                        <p class="info-description">在天翼云适配项目中，出现vpp服务异崩溃问题。深挖出底层特性相关报错，覆盖堆栈地址分配、共享地址非法覆写、
+                        <p class="info-description">在天翼云适配项目中，出现vpp服务异崩溃问题。深挖出底层特性相关报错，
+                            覆盖堆栈地址分配、共享地址非法覆写、
                             memset内存操作的粒度等方面，保障项目追赶上计划进度。
+                            完成插桩工具Dyninst移植工作，攻克了申威架构目标文件符号解析、指令解析、程序流程分析等难点，
+                            实现对申威目标文件的符号解析、指令解析、程序执行流程解析等功能支持。
                             <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错记录</a>
                             <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
                         </p>
