--- a/index.html
+++ b/index.html
@@ -533,8 +533,16 @@
             /* 
              * 针对第二个段落的伪元素 `::before`，使用不同的 Font Awesome 图标。
              */
-             #specialty-card p:nth-child(3)::before {
-                content: "\f1fd"; /* 图标代码 */
+            #specialty-card p:nth-child(3)::before {
+                content: "\f188"; /* 图标代码 */
+            }
+
+            #specialty-card p:nth-child(4)::before {
+                content: "\f0ad"; /* 图标代码 */
+            }
+
+            #specialty-card p:nth-child(5)::before {
+                content: "\f007"; /* 图标代码 */
             }
 
             /* 
@@ -808,7 +816,7 @@
                                 <a href=https://hanxuliu.github.io/pdf-web/patent/patent_gdb.html class="break-link">《一种程序调试方法》</a>
                                 <a href=https://hanxuliu.github.io/pdf-web/patent/patent_hpc.html class="break-link">《一种并行程序性能分析方法》</a></li>
                             <li>2篇软著《申威LLDB调试器软件》《申威Systemtap跟踪和探测工具软件》</li>
-                            <li>计算机技术与软件专业技术资格：软件设计师（中级）认证</li>
+                            <li>计算机技术与软件专业技术资格：软件设计师（中级）</li>
                             <li>
                                 3次培训授课
                                 <a href=https://hanxuliu.github.io/pdf-web/ppt/Debugging_and_Tuning.html class="break-link">《申威软件调试调优技术》</a>
@@ -915,10 +923,12 @@
 
                 <!-- 个人特长卡片模块 -->
                 <div class="card" id="specialty-card">
-                    <h2 class="card-title">个人特长</h2>
-                    <p>具备扎实的编程基础，熟练掌握 Java、Python 等编程语言。</p>
-                    <p>拥有良好的团队协作能力，曾在多个项目中担任核心成员，带领团队完成任务。</p>
-                    <p>具备较强的学习能力，能够快速掌握新的知识和技能，适应新的工作环境。</p>
+                    <h2 class="card-title">个人技能和特长</h2>
+                    <p>熟悉计算机体系结构、LLVM代码框架和基本编译原理、熟悉C/C++/汇编。</p>
+                    <p>熟练使用GDB/LLDB等Debugger工具、Vim/Git等开发工具，具备较强的问题排查定位能力。</p>
+                    <p>熟悉binutils工具集、make/cmake构建工具、rpm打包流程。</p>
+                    <p>拥有良好的团队协作能力，曾在多个项目中担任核心成员，开展联调和对接工作。</p>
+                    <p>具备较强的攻坚克难、钻研探索能力，能够快速承担新任务。</p>
                 </div>
 
                 <!-- 证书展示卡片 -->
