--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                 <div class="profile-card">
                     <div class="avatar-container">
                         <!-- 头像 -->
-                        <img src="https://cdn.jsdelivr.net/gh/HanxuLiu/hanxuliu.github.io@master/img/pic.webp" alt="个人头像" class="avatar">
+                        <img src="./img/pic.webp" alt="个人头像" class="avatar">
                         <!-- 姓名 -->
                         <h1 class="name">刘汉旭</h1>
                         <!-- 英文名 -->
@@ -816,17 +816,18 @@
                                 回顾5年工作历程，取得了从“职场小白->技术骨干->牵头骨干”的个人进步和成长。</p><br>
                             <ul class="custom-list">
                             <li>申威AI芯片“攻关先锋”奖、公司“年度先进个人”奖、“大干之星”奖</li>
-                            <li>1篇论文 <a href=https://hanxuliu.github.io/pdf-web/paper/paper_gdb.html class="break-link">《面向申威平台的反向调试技术研究》</a></li>
-                            <li>3篇专利<a href=https://hanxuliu.github.io/pdf-web/patent/patent_lldb.html class="break-link">《一种硬件观察点调试方法》</a>
-                                <a href=https://hanxuliu.github.io/pdf-web/patent/patent_gdb.html class="break-link">《一种程序调试方法》</a>
-                                <a href=https://hanxuliu.github.io/pdf-web/patent/patent_hpc.html class="break-link">《一种并行程序性能分析方法》</a></li>
-                            <li>2篇软著《申威LLDB调试器软件》《申威Systemtap跟踪和探测工具软件》</li>
+                            <li>1篇论文 <a href=https://hanxuliu.github.io/work-achievement/paper/gdb.html class="break-link">《面向申威平台的反向调试技术研究》</a></li>
+                            <li>3篇专利<a href=https://hanxuliu.github.io/work-achievement/patent/lldb.html class="break-link">《一种硬件观察点调试方法》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/patent/gdb.html class="break-link">《一种程序调试方法》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/patent/hpc.html class="break-link">《一种并行程序性能分析方法》</a></li>
+                            <li>2篇软著<a href=https://hanxuliu.github.io/work-achievement/software/swlldb.html class="break-link">《申威LLDB调试器软件》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/software/systemtap.html class="break-link">《申威Systemtap探测软件》</a></li>
                             <li>计算机技术与软件专业技术资格：软件设计师（中级）</li>
                             <li>
                                 3次培训授课
-                                <a href=https://hanxuliu.github.io/pdf-web/ppt/Debugging_and_Tuning.html class="break-link">《申威软件调试调优技术》</a>
-                                <a href=https://hanxuliu.github.io/pdf-web/ppt/Debugging_with_GDB_LLDB.html class="break-link">《从基础到高级调试——申威GDB&LLDB调试指南》</a>
-                                <a href=https://hanxuliu.github.io/pdf-web/ppt/Art_of_Debugging.html class="break-link">《探索调试之美——调试器原理、实践和技巧》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/ppt/Debugging_and_Tuning.html class="break-link">《申威软件调试调优技术》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/ppt/Debugging_with_GDB_LLDB.html class="break-link">《从基础到高级调试——申威GDB&LLDB调试指南》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/ppt/Art_of_Debugging.html class="break-link">《探索调试之美——调试器原理、实践和技巧》</a>
                             </li>
                 </ul>
                         </div>
@@ -897,8 +898,7 @@
                             ②通过调试汇编代码定位到，odps产品联合编译时隐含指定了优化选项，导致folly库编译时指令优化异常。
                             出差北京展开为期29天的攻关，成功解决该问题，推动了阿里后续众多大数据产品线联调，
                             解决阻碍项目进展2个多月的卡点。
-                            <br>相关证明链接：<a href=https://hanxuliu.github.io/pdf-web/report/ali_boost_coredump.html class="break-link">查错总结报告</a>
-                            <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
+                            <br>相关证明链接：<a href=https://hanxuliu.github.io/work-achievement/report/ali_boost_coredump.html class="break-link">查错总结报告</a>
                         </p>
                     </div>
 
@@ -917,8 +917,7 @@
                             内存地址的非法篡改行为，深挖问题原因发现源于不同架构底层特性，涉及堆栈地址分配规则和memset内存操作粒度，
                             通过内核态、用户态之间跨层联合调试，最终定位到组件代码中采用不合理地址配置，导致与SW64内存布局冲突，
                             解决问题后使得项目追赶上计划进度。
-                            <br>相关证明链接：<a href=https://developer.wxiat.cn class="break-link">查错记录</a>
-                            <a href=https://developer.wxiat.cn class="break-link">公司宣传报道</a>
+                            <br>相关证明链接：<a href=https://hanxuliu.github.io/work-achievement/report/tele_vpp_coredump.html class="break-link">查错总结报告</a>
                         </p>
                     </div>
 
