try to set imgs same size

--- a/index.html
+++ b/index.html
@@ -882,9 +882,7 @@
                             并带领实习生成功将大模型接入内存分析工具Valgrind中。
                             实现AI能力与调试器的原生级融合，避免“跨窗口、割裂式”的AI使用体验，明显提升
                             申威平台开发查错效率。
-                            <br>效果展示链接：<a href=https://developer.wxiat.cn class="break-link">GDB接入ChatGPT</a>
-                            <a href=https://developer.wxiat.cn class="break-link">LLDB接入DeepSeek</a>
-                            <a href=https://developer.wxiat.cn class="break-link">Valgrind接入DeepSeek</a>
+                            <br>效果展示：<a href=https://hanxuliu.github.io/work-achievement/debugger_AI/debugger_AI.html class="break-link">GDB/LLDB/Delve/Valgrind接入DeepSeek</a>
                         </p>
                     </div>
 
@@ -898,7 +896,7 @@
                             ②通过调试汇编代码定位到，odps产品联合编译时隐含指定了优化选项，导致folly库编译时指令优化异常。
                             出差北京展开为期29天的攻关，成功解决该问题，推动了阿里后续众多大数据产品线联调，
                             解决阻碍项目进展2个多月的卡点。
-                            <br>相关证明链接：<a href=https://hanxuliu.github.io/work-achievement/report/ali_boost_coredump.html class="break-link">查错总结报告</a>
+                            <br><a href=https://hanxuliu.github.io/work-achievement/report/ali_boost_coredump.html class="break-link">查错总结报告</a>
                         </p>
                     </div>
 
@@ -917,7 +915,7 @@
                             内存地址的非法篡改行为，深挖问题原因发现源于不同架构底层特性，涉及堆栈地址分配规则和memset内存操作粒度，
                             通过内核态、用户态之间跨层联合调试，最终定位到组件代码中采用不合理地址配置，导致与SW64内存布局冲突，
                             解决问题后使得项目追赶上计划进度。
-                            <br>相关证明链接：<a href=https://hanxuliu.github.io/work-achievement/report/tele_vpp_coredump.html class="break-link">查错总结报告</a>
+                            <br><a href=https://hanxuliu.github.io/work-achievement/report/tele_vpp_coredump.html class="break-link">查错总结报告</a>
                         </p>
                     </div>
 
