--- a/index.html
+++ b/index.html
@@ -819,15 +819,15 @@
                             <li>1篇论文 <a href=https://hanxuliu.github.io/work-achievement/paper/gdb.html class="break-link">《面向申威平台的反向调试技术研究》</a></li>
                             <li>3篇专利<a href=https://hanxuliu.github.io/work-achievement/patent/lldb.html class="break-link">《一种硬件观察点调试方法》</a>
                                 <a href=https://hanxuliu.github.io/work-achievement/patent/gdb.html class="break-link">《一种程序调试方法》</a>
-                                <a href=https://hanxuliu.github.io/work-achievement/patent/hpc.html class="break-link">《一种并行程序性能分析方法》</a></li>
+                                <a href=https://hanxuliu.github.io/work-achievement/patent/hpc.html class="break-link">《一种并行程序分析方法》</a></li>
                             <li>2篇软著<a href=https://hanxuliu.github.io/work-achievement/software/swlldb.html class="break-link">《申威LLDB调试器软件》</a>
                                 <a href=https://hanxuliu.github.io/work-achievement/software/systemtap.html class="break-link">《申威Systemtap探测软件》</a></li>
                             <li>计算机技术与软件专业技术资格：软件设计师（中级）</li>
                             <li>
                                 3次培训授课
                                 <a href=https://hanxuliu.github.io/work-achievement/ppt/Debugging_and_Tuning.html class="break-link">《申威软件调试调优技术》</a>
-                                <a href=https://hanxuliu.github.io/work-achievement/ppt/Debugging_with_GDB_LLDB.html class="break-link">《从基础到高级调试——申威GDB&LLDB调试指南》</a>
-                                <a href=https://hanxuliu.github.io/work-achievement/ppt/Art_of_Debugging.html class="break-link">《探索调试之美——调试器原理、实践和技巧》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/ppt/Debugging_with_GDB_LLDB.html class="break-link">《从基础到高级调试》</a>
+                                <a href=https://hanxuliu.github.io/work-achievement/ppt/Art_of_Debugging.html class="break-link">《探索调试之美》</a>
                             </li>
                 </ul>
                         </div>
