update project end time

--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
 
                     <div class="info-item">
                         <h3 class="info-title">五、天翼云项目</h3>
-                        <p class="info-date">2024年3月 PCRE-JIT功能研发</p>
+                        <p class="info-date">2024年3月 - 2024年6月 PCRE-JIT功能研发</p>
                         <p class="info-description">负责正则表达式引擎PCRE中SW64架构即时编译JIT功能开发，实现对PCRE库sljit即时编译器中SW64架构的从零开发及优化，涉及寄存器分配和指令上下文保存恢复，编写sljit_generate_code/emit_op等40余个jit模块接口，支持SLJIT_MOV/ADD等50余种操作码，成功将PCRE生成的内部字节码转换为SW64架构机器码，功能测试集通过率100%，已提供给天翼云项目使用。此外通过优化立即数加载、跳转目的地址等方式减少最终生成指令数约20%，性能加速比达15.23。
                         </p>
 
